--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,12 @@
         android:inputType="textPassword" />
 
     <LinearLayout
-        android:layout_width="351dp"
+        android:layout_width="match_parent"
         android:layout_height="131dp">
 
         <Button
             android:id="@+id/bt_registro"
-            android:layout_width="109dp"
+            android:layout_width="105dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Registro"
