--- a/app/src/main/res/layout/alimentovista.xml
+++ b/app/src/main/res/layout/alimentovista.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/vistaAlimentos"
-    android:layout_width="200dp"
-    android:layout_height="140dp"
+    android:layout_width="290dp"
+    android:layout_height="190dp"
     android:layout_margin="10dp"
     app:cardCornerRadius="25dp"
     app:cardElevation="30dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="290dp"
         android:layout_height="match_parent">
 
         <TextView
@@ -29,23 +29,35 @@
 
         <ImageView
             android:id="@+id/imagen"
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
             tools:srcCompat="@drawable/img" />
 
         <TextView
-            android:id="@+id/tv_precio"
+            android:id="@+id/tv_descripcion"
             android:layout_width="85dp"
             android:layout_height="19dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="28dp"
             android:text="TextView"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.631"
+            app:layout_constraintHorizontal_bias="0.405"
+            app:layout_constraintStart_toEndOf="@+id/imagen"
+            app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />
+
+        <TextView
+            android:id="@+id/tv_calorias"
+            android:layout_width="85dp"
+            android:layout_height="19dp"
+            android:layout_marginTop="84dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.405"
             app:layout_constraintStart_toEndOf="@+id/imagen"
             app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />
 
