implemantado la parte del Storage pero en la aplicacion cuando se quiere tomara una foto no hace nada  y cuando se quiere guardar datos se queda cargando un buen rato

--- a/app/src/main/res/layout/fragment_update_alimento.xml
+++ b/app/src/main/res/layout/fragment_update_alimento.xml
@@ -47,4 +47,22 @@
         android:padding="10dp"
         android:text="@string/bt_delete_alimento"
         android:textColorHint="@color/white" />
+
+    <ImageButton
+        android:id="@+id/btPlay"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_weight="1"
+        android:contentDescription="@string/msgEscucharAudio"
+        android:src="@drawable/ic_play" />
+
+    <ImageView
+        android:id="@+id/imagen"
+        android:layout_width="wrap_content"
+        android:layout_height="380dp"
+        android:contentDescription="@string/msg_imagen"
+        android:scaleType="centerInside"
+        tools:ignore="ImageContrastCheck"
+        tools:src="@tools:sample/backgrounds/scenic" />
 </LinearLayout>
+
