--- a/app/src/main/res/layout/alimentovista.xml
+++ b/app/src/main/res/layout/alimentovista.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/vistaAlimentos"
-    android:layout_width="290dp"
+    android:layout_width="340dp"
     android:layout_height="190dp"
     android:layout_margin="10dp"
     app:cardCornerRadius="25dp"
     app:cardElevation="30dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="290dp"
+        android:layout_width="338dp"
         android:layout_height="match_parent">
 
         <TextView
@@ -32,20 +32,19 @@
             android:layout_width="120dp"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
             tools:srcCompat="@drawable/img" />
 
         <TextView
             android:id="@+id/tv_descripcion"
-            android:layout_width="85dp"
-            android:layout_height="19dp"
-            android:layout_marginTop="28dp"
-            android:text="TextView"
+            android:layout_width="171dp"
+            android:layout_height="136dp"
+            android:layout_marginTop="8dp"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.405"
+            app:layout_constraintHorizontal_bias="0.418"
             app:layout_constraintStart_toEndOf="@+id/imagen"
             app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />
 
@@ -53,13 +52,14 @@
             android:id="@+id/tv_calorias"
             android:layout_width="85dp"
             android:layout_height="19dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="104dp"
+            android:layout_marginEnd="240dp"
             android:text="TextView"
             android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.405"
-            app:layout_constraintStart_toEndOf="@+id/imagen"
-            app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
+            app:layout_constraintVertical_bias="0.055" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
