--- a/app/src/main/res/layout/fragment_add_alimento.xml
+++ b/app/src/main/res/layout/fragment_add_alimento.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/NombreAlimento"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:padding="20dp" />
 
     <EditText
         android:id="@+id/et_descripcion"
@@ -39,7 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/btAddAlimento"
-        android:padding="20dp" />
-
+        android:padding="20dp"
+        android:textColorHint="#FAFAFA" />
 
 </LinearLayout>
+
